--- a/Weather/index.html
+++ b/Weather/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Weather</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="./styles.css">
         <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     </head>
